<resources>
    <string name="app_name">FirebaseCompleto</string>
    <string name="login">login</string>
    <string name="cadastro">cadastro</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="email_incorreto">Email incorreto</string>
    <string name="senha_incorreta">Senha incorreta</string>
    <string name="nome">nome</string>
    <string name="celular">celular (com ddd)</string>
    <string name="cadastrar">cadastrar</string>
    <string name="idade">idade</string>
    <string name="masculino">masculino</string>
    <string name="feminino">feminino</string>
    <string name="aceito_receber_notificacoes">aceito receber notificações</string>
    <string name="sexo">sexo:</string>
    <string name="nome_invalido">nome inválido</string>
    <string name="senha_invalida">senha deve ter 6 (seis) caracteres</string>
    <string name="data_nascimento">data de nascimento</string>
    <string name="cpf">CPF</string>
    <string name="erro">erro</string>
    <string name="logoff">logoff</string>
    <string name="confirma_logoff">confirma logoff?</string>
    <string name="cancelar">cancelar</string>
    <string name="sim">sim</string>
    <string name="cadastro_efetuado">cadastro efetuado</string>
    <string name="email_senha_verificados">email/senha verificados</string>
    <string name="data_invalida">data inválida</string>
    <string name="sem_conexao_com_internet">sem conexão com a internet</string>
    <string name="usuario_desconectado">usuário desconectado</string>
    <string name="nao">não</string>
    <string name="atencao">atenção</string>
    <string name="ok">ok</string>
    <string name="confirmacao">confirmação</string>
    <string name="sucesso">sucesso</string>
    <string name="aviso">aviso</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="facebook_app_id">223473012043138</string>
    <string name="fb_login_protocol_scheme">fb223473012043138</string>
    <string name="facebook_application_id" translatable="false">223473012043138</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb223473012043138</string>
    <string name="login_com_email">login c/ email</string>
    <string name="login_com_facebook">login c/ facebook</string>
    <string name="login_com_google">login c/ google</string>
    <string name="login_anonimo">login anônimo</string>
    <string name="database_gravar_alterar_excluir">Database - gravar/alterar/excluir</string>
    <string name="empresas">Empresas</string>
    <string name="database_ler_dados">Database - Ler dados</string>
    <string name="storage_upload">Storage Upload</string>
    <string name="storage_download">Storage Download</string>
    <string name="atualizar">atualizar</string>
    <string name="download">download</string>
    <string name="remover">remover</string>
    <string name="gerar_pdf">Gerar PDF</string>
    <string name="compartilhar">compartilhar</string>
    <string name="upload">upload</string>
    <string name="galeria">galeria</string>
    <string name="tirar_foto">tirar foto</string>
    <string name="camera">câmera</string>
    <string name="obter_imagem">obter imagem</string>
    <string name="aguarde">Aguarde...</string>
    <string name="fumante">fumante</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">excluir</string>
    <string name="incluir">incluir</string>
    <string name="pasta">pasta</string>
    <string name="lista_de_empresas">Lista de empresas</string>

</resources>