<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".database.DatabaseLerDadosActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:text="@string/nome"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/idade"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvFumante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fumante"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvNome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/nome"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvIdade2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/idade"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvFumante2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fumante"
        android:textSize="16sp"
        android:textStyle="bold"
        />

</LinearLayout>